--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,2 @@
-# Working as a Data analyst at a pension fund, studying Master of IT at Aalborg University.
+## Working as a Data analyst at a pension fund, part tiome student at Aalborg University (MIT).
+Repository is mainly experiments.
