--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,4 @@
 ## Working as a Data analyst at a pension fund, part tiome student at Aalborg University (MIT).
+Previously completed CS50 for Python Programming on HarvardX / EdX
+
 Repository is mainly experiments.
